[gd_scene load_steps=3 format=3 uid="uid://biqi8nf6frwu8"]

[ext_resource type="Script" uid="uid://c01erok7gwqai" path="res://pause_menu.gd" id="1_hdmo1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wyi4u"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 13
visible = false
script = ExtResource("1_hdmo1")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.388235)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="backToGame" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 60.0
offset_top = 47.0
offset_right = 443.0
offset_bottom = 121.0
text = "返回游戏"

[node name="quickSave" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 60.0
offset_top = 153.0
offset_right = 443.0
offset_bottom = 227.0
text = "快速保存"

[node name="saves" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 60.0
offset_top = 258.0
offset_right = 443.0
offset_bottom = 332.0
text = "存档列表"

[node name="exitGame" type="Button" parent="Panel2"]
layout_mode = 0
offset_left = 60.0
offset_top = 375.0
offset_right = 443.0
offset_bottom = 449.0
text = "退出游戏"

[node name="savePanel" type="Panel" parent="."]
visible = false
offset_left = 712.0
offset_top = 276.0
offset_right = 1212.0
offset_bottom = 826.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wyi4u")

[node name="ScrollContainer" type="ScrollContainer" parent="savePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="savePanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="savePanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 24
text = "存档列表"

[node name="saveNewButton" type="Button" parent="savePanel"]
layout_mode = 0
offset_left = 430.0
offset_top = 8.0
offset_right = 460.0
offset_bottom = 41.0
text = "新"

[node name="backButton" type="Button" parent="savePanel"]
layout_mode = 0
offset_left = 463.0
offset_top = 8.0
offset_right = 493.0
offset_bottom = 41.0
text = "X"

[connection signal="button_down" from="Panel2/backToGame" to="." method="_on_back_button_down"]
[connection signal="button_down" from="Panel2/quickSave" to="." method="_on_quick_save_button_down"]
[connection signal="button_down" from="Panel2/saves" to="." method="_on_saves_button_down"]
[connection signal="button_down" from="Panel2/exitGame" to="." method="_on_exit_game_button_down"]
[connection signal="button_down" from="savePanel/saveNewButton" to="." method="_on_save_new_button_down"]
[connection signal="button_down" from="savePanel/backButton" to="." method="_on_save_back_button_down"]
